--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Telegram Radio Player V3",
-  "description": "An Telegram Bot By Safone to Play Nonstop Radio/Music/YouTube Live in Telegram Voice Chats",
-  "logo": "https://telegra.ph/file/a3755d9cb09f1361e3ac7.jpg",
+  "description": "An Telegram Bot By Winter SoldierX25 to Play Nonstop Radio/Music/YouTube Live in Telegram Voice Chats",
+  "logo": "https://telegra.ph/file/e6ab111de3f5fb6140aa9.jpg",
   "stack": "container",
   "keywords": [
     "telegram",
