--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Telegram Radio Player V3",
+  "name": "ArrowX25 Music 🇮🇳",
   "description": "An Telegram Bot By Winter SoldierX25 to Play Nonstop Radio/Music/YouTube Live in Telegram Voice Chats",
   "logo": "https://telegra.ph/file/e6ab111de3f5fb6140aa9.jpg",
   "stack": "container",
